# algorism

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  vcpkg.sh
.github/workflows/: develop.yml
algorism/allocator/: default_allocator.cpp  string_allocator.cpp
algorism/io/: stdout.cpp
algorism/list/: list.cpp
algorism/log/: log.cpp  log.hpp
algorism/math/: math.cpp
algorism/platform/: inline.hpp
algorism/string/: c_string.cpp  convert.cpp  string.cpp
algorism/type/: initializer_list.cpp  noncopyable.cpp  type_traits.cpp
benchmark/: main.cpp
benchmark/string/: string_benchmark.cpp  string_benchmark.hpp
test/: test_suite.cpp
test/io/: output_test_suite.cpp
test/list/: list_test_suite.cpp
test/string/: string_test_suite.cpp
